
 o fixed configure to set ocaml's standard library using "ocamlc -where"
 o new module Dot to parse files in Graphviz's DOT format
 o slight change in the license (no more clause 6 of the LGPL; see LICENSE)
 o new module Strat implementing simple game strategies
 o Graphviz: little refactoring and improved documentation

version 0.98, Sept 27th, 2006
-----------------------------
 o rename Sig.IA to Sig.IM
 o add subgraph support in Graphviz 
   (breaks ascendent compatibility if you use Graphviz: by default add
      let get_subgraph _ = None
   in the argument of Graphviz.Dot and Graphviz.Neato)

version 0.97, July 20th, 2006
-----------------------------
 o fixed compilation under Windows/Cygwin (contributed by Denis Berthod)
 o fixed bug with escaped string in Graphviz

version 0.96, May 2nd, 2006
---------------------------
 o new demo program: sudoku.ml (solving the Sudoku using graph coloring)
 o new module Coloring for (rather brute force) graph coloring
 o new implementation Imperative.Digraph.ConcreteBidirectional
   that maintains the set of ingoing edges for each node, thus improving the
   efficiency of functions such as iter_pred, pred, in_degree, etc.
   (contributed by Ted Kremenek)

version 0.95, November 2nd, 2005
--------------------------------
 o compatibility with ocaml 3.09
 o new module Path.Check to check for paths 

version 0.94, July 6th, 2005
----------------------------
 o new module Gml to parse and print graphs in GML file format
   (see http://www.infosun.fmi.uni-passau.de/Graphlet/GML)
   corresponding functions parse_gml_file and print_gml_file in Pack
 o added display_with_gv in Pack
 o improved implementation of Unionfind (patch by Marc Lasson)

version 0.93, March 31st, 2005
------------------------------
 o fixed bug in Rand (integer overflow causing Invalid_argument "random");
   improved code in Rand
 o bug fixed in the META file
 o add find_edge in Sig.G (and so in all graph implementations)
