@@ -1,4 +1,6 @@
 
+ o [Components.Make] functor: function [scc] as a new profile and a
+   more precise specification. New function [scc_array].
  o fixed configure to set ocaml's standard library using "ocamlc -where"
  o new module Dot to parse files in Graphviz's DOT format
  o slight change in the license (no more clause 6 of the LGPL; see LICENSE)
@@ -119,3 +121,7 @@ version 0.60, Feb 18th, 2004
 version 0.50, Feb 4th, 2004
 ---------------------------
  o first release
+
+Local Variables: 
+mode: text
+End: 
